developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_name_must_be_at_least_one_char_long-store.kmn
c Description: Verifies that kmc reports an error with invalid names in groups, stores, and deadkeys

store(&NAME) 'error_name_must_be_at_least_one_char_long-store'

begin unicode > use(main)

store() 'test'

group(main) using keys
  + [K_A] > 'a'
